a bunch of little things identified by findbugs.  there are some more which I have not yet worked through. Mostly harmless.
git-svn-id: https://svn.code.sf.net/p/bigdata/code/branches@2227 8f7bc0f5-282e-0410-95e3-8d296e9bb460